--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <style type="text/css">
-#canvas, #content, #content object {
+#canvas, #content, #content * {
   pointer-events: none;
 }
 
@@ -33,6 +33,55 @@ html, body, #view, #canvas, #content {
 #content {
   transform: matrix(0.125, 0, 0, 0.125, 0, 0);
   transform-origin: 0 0;
+  transition: transform 0s;
+  
+  position: relative;
+}
+
+#content * {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.fallback {
+  transform: scale(2);
+  transform-origin: 0 0;
+}
+
+#controls {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 32px;
+  display: inline-block;
+}
+
+#controls fieldset, #controls legend {
+  background-color: canvas;
+}
+
+#controls fieldset {
+  margin: 0;
+  border-radius: 8px;
+}
+
+#controls legend {
+  padding: 4px 8px;
+  border-radius: 4px;
+}
+
+#controls input {
+  vertical-align: middle;
+}
+
+#controls table {
+  border-spacing: 16px;
+}
+
+#controls select {
+  width: 100%;
+  overflow-y: auto;
 }
 </style>
 </head>
@@ -43,14 +92,43 @@ html, body, #view, #canvas, #content {
 <section id="canvas">
 <!-- The visual content that is transformed -->
 <figure id="content">
-<object type="image/svg+xml" data="0.5.3/Azeroth.svg"></object>
+<object id="layer1" data="0.5.3/Azeroth.svg" type="image/svg+xml" style="opacity:1">
+<img src="0.5.3/Azeroth.webp" class="fallback">
+</object>
+<object id="layer2" data="0.0.2003.5/Azeroth.svg" type="image/svg+xml" style="opacity:1">
+</object>
 </figure>
 </section>
 </main>
+<aside id="controls">
+<form autocomplete="off">
+<fieldset>
+<legend>Controls</legend>
+<table>
+<tr>
+<td>
+<label>Layers:<br>
+<select id="layers" size="2" onchange="selectLayer()">
+<option value="2" selected>2</option>
+<option value="1">1</option>
+</select>
+</label>
+</td>
+<td>
+<label>Opacity: <input type="range" id="opacity" min="0" max="100" value="100" oninput="updateLayer()" onchange="updateLayer()"></label>
+</td>
+</tr>
+</table>
+</fieldset>
+</form>
+</aside>
 <script type="text/javascript">
 var view = document.getElementById('view');
 var canvas = document.getElementById('canvas');
 var content = document.getElementById('content');
+
+var layers = document.getElementById('layers');
+var opacity = document.getElementById('opacity');
 
 var zoom = 0.125;
 var zoomFactor = 1.001;
@@ -100,6 +178,22 @@ view.addEventListener('wheel', event => {
   content.style.transition = zoom >= 0.25 ? 'transform 0.15s' : 'transform 0.05s';
   content.style.transform = `matrix(${zoom}, 0, 0, ${zoom}, ${xTranslate}, ${yTranslate})`;
 });
+
+function updateLayer()
+{
+  var index = layers.value;
+  var layer = document.getElementById('layer' + index);
+  
+  layer.style.opacity = opacity.value / 100;
+}
+
+function selectLayer()
+{
+  var index = layers.value;
+  var layer = document.getElementById('layer' + index);
+  
+  opacity.value = layer.style.opacity * 100;
+}
 </script>
 </body>
 </html>
