October 2001 Kalimdor Design map

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ html, body, #view, #canvas, #content {
 <option value="1.0.0/Azeroth">1.0.0 Minimap</option>
 </optgroup>
 <optgroup id="Kalimdor" label="Kalimdor" style="display:none">
+<option value="0.0.2001.10/Kalimdor">October 2001 Design map</option>
 <option value="0.5.3/Kalimdor">0.5.3 Minimap</option>
 <option value="0.0.2003.7/Kalimdor">0.5.3 TaxiMap01</option>
 <option value="0.9.1/Kalimdor">0.9.1 Minimap</option>
