Kalimdor website map

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ fieldset.properties {
 <option value="0.0.2001.10/Kalimdor">October 2001 Design map</option>
 <option value="0.5.3/Kalimdor">0.5.3 Minimap</option>
 <option value="0.0.2003.7/Kalimdor">0.5.3 TaxiMap01</option>
+<option value="0.0.2003.9/Kalimdor">September 2003 Website map</option>
 <option value="0.9.1/Kalimdor">0.9.1 Minimap</option>
 <option value="1.0.0/Kalimdor">1.0.0 Minimap</option>
 </optgroup>
