--- a/index.html
+++ b/index.html
@@ -175,8 +175,10 @@ fieldset.properties {
 <td>
 <label>Add layer: <select id="addlayer" onchange="addSelectedLayer()">
 <optgroup name="Azeroth" label="Eastern Kingdoms">
-<option value="0.5.3/Azeroth">0.5.3 Minimap</option>
+<option value="0.0.2002.9/Azeroth">September 2002 Minimap</option>
+<option value="0.0.2003.0/Azeroth">Early Alpha Minimap</option>
 <option value="0.0.2003.5/Azeroth">0.5.3 TaxiMap00</option>
+<option value="0.5.3/Azeroth">0.5.3 Minimap</option>
 <option value="0.9.1/Azeroth">0.9.1 Minimap</option>
 <option value="1.0.0/Azeroth">1.0.0 Minimap</option>
 </optgroup>
