maps from the manual

--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@ fieldset.properties {
 <tr>
 <td>
 <label>Add layer: <select id="addlayer" onchange="addSelectedLayer()">
-<optgroup name="Azeroth" label="Eastern Kingdoms">
+<optgroup name="Azeroth" label="Concept maps">
+<option value="0.0.2004.0/Azeroth">Game manual map</option>
+</optgroup>
+<optgroup name="Azeroth" label="Terrain maps">
 <option value="0.0.2002.9/Azeroth">September 2002 Minimap</option>
 <option value="0.0.2003.0/Azeroth">Early Alpha Minimap</option>
 <option value="0.0.2003.5/Azeroth">0.5.3 TaxiMap00</option>
@@ -182,9 +185,12 @@ fieldset.properties {
 <option value="0.9.1/Azeroth">0.9.1 Minimap</option>
 <option value="1.0.0/Azeroth">1.0.0 Minimap</option>
 </optgroup>
-<optgroup name="Kalimdor" label="Kalimdor" style="display:none">
+<optgroup name="Kalimdor" label="Concept maps" style="display:none">
 <option value="0.0.2001.10/Kalimdor">October 2001 Design map</option>
 <option value="0.0.2003.9/Kalimdor">September 2003 Website map</option>
+<option value="0.0.2004.0/Kalimdor">Game manual map</option>
+</optgroup>
+<optgroup name="Kalimdor" label="Terrain maps" style="display:none">
 <option value="0.0.2003.7/Kalimdor">0.5.3 TaxiMap01</option>
 <option value="0.5.3/Kalimdor">0.5.3 Minimap</option>
 <option value="0.9.1/Kalimdor">0.9.1 Minimap</option>
