remaining 0.5.3 world maps

--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@ fieldset.properties {
 <option value="0.0.2004.0/Kalimdor">Game manual map</option>
 </optgroup>
 <optgroup name="Kalimdor" label="Terrain maps" style="display:none">
-<option value="0.0.2003.7/Kalimdor">0.5.3 TaxiMap01</option>
+<option value="0.0.2003.6/Kalimdor">0.5.3 TaxiMap01</option>
+<option value="0.0.2003.7/Kalimdor">0.5.3 World maps (old rendering)</option>
+<option value="0.0.2003.8/Kalimdor">0.5.3 World maps (new rendering)</option>
 <option value="0.5.3/Kalimdor">0.5.3 Minimap</option>
 <option value="0.9.1/Kalimdor">0.9.1 Minimap</option>
 <option value="1.0.0/Kalimdor">1.0.0 Minimap</option>
