--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ fieldset.properties {
 <option value="brightness(0.6666)">darken</option>
 <option value="saturate(200%)">saturate</option>
 <option value="saturate(50%)">desaturate</option>
-<option value="url(#sharpen)">sharpen</option>
-<option value="url(#high-pass)">high pass</option>
-<option value="url(#low-pass)">low pass</option>
+<option value="url(&quot;#sharpen&quot;)">sharpen</option>
+<option value="url(&quot;#high-pass&quot;)">high pass</option>
+<option value="url(&quot;#low-pass&quot;)">low pass</option>
 </select></label>
 </fieldset>
 </td>
@@ -182,7 +182,7 @@ fieldset.properties {
 <option value="0.0.2002.9/Azeroth">September 2002 Minimap</option>
 <option value="0.0.2003.0/Azeroth">Early Alpha Minimap</option>
 <option value="0.0.2003.5/Azeroth">0.5.3 TaxiMap00</option>
-<option value="0.0.2003.8/Azeroth">0.5.3 World maps (new rendering)</option>
+<option value="0.0.2003.8/Azeroth">0.5.3 World maps (new shading)</option>
 <option value="0.5.3/Azeroth">0.5.3 Minimap</option>
 <option value="0.9.1/Azeroth">0.9.1 Minimap</option>
 <option value="1.0.0/Azeroth">1.0.0 Minimap</option>
@@ -194,8 +194,8 @@ fieldset.properties {
 </optgroup>
 <optgroup name="Kalimdor" label="Terrain maps" style="display:none">
 <option value="0.0.2003.6/Kalimdor">0.5.3 TaxiMap01</option>
-<option value="0.0.2003.7/Kalimdor">0.5.3 World maps (old rendering)</option>
-<option value="0.0.2003.8/Kalimdor">0.5.3 World maps (new rendering)</option>
+<option value="0.0.2003.7/Kalimdor">0.5.3 World maps (old shading)</option>
+<option value="0.0.2003.8/Kalimdor">0.5.3 World maps (new shading)</option>
 <option value="0.5.3/Kalimdor">0.5.3 Minimap</option>
 <option value="0.9.1/Kalimdor">0.9.1 Minimap</option>
 <option value="1.0.0/Kalimdor">1.0.0 Minimap</option>
