old shading 0.5.3 Azeroth map

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@ fieldset.properties {
 <option value="0.0.2002.9/Azeroth">September 2002 Minimap</option>
 <option value="0.0.2003.0/Azeroth">Early Alpha Minimap</option>
 <option value="0.0.2003.5/Azeroth">0.5.3 TaxiMap00</option>
+<option value="0.0.2003.7/Azeroth">0.5.3 World maps (old shading)</option>
 <option value="0.0.2003.8/Azeroth">0.5.3 World maps (new shading)</option>
 <option value="0.5.3/Azeroth">0.5.3 Minimap</option>
 <option value="0.6.0/Azeroth">0.6.0 Minimap</option>
