select default layer

--- a/index.html
+++ b/index.html
@@ -765,9 +765,11 @@ function setContinent(newContinent)
     {
       case 'Azeroth':
         addLayer("September 2002 Minimap", '0.0.2002.9/Azeroth');
+        selectLayer();
         break;
       case 'Kalimdor':
         addLayer("0.5.3 TaxiMap01", '0.0.2003.6/Kalimdor');
+        selectLayer();
         break;
       default:
         toggleProperties(false);
@@ -782,6 +784,7 @@ function setContinent(newContinent)
 if(!fragment)
 {
   addLayer("September 2002 Minimap", '0.0.2002.9/Azeroth');
+  selectLayer();
 }else{
   loadFragment(fragment);
 }
