restitched Azeroth concept and manual maps

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@ Selected layer
 <td>
 <label>Add layer: <select id="addlayer" onchange="addSelectedLayer()">
 <optgroup name="Azeroth" label="Concept maps">
+<option value="0.0.2001.10/Azeroth">October 2001 Design map</option>
 <option value="0.0.2004.0/Azeroth">Game manual map</option>
 </optgroup>
 <optgroup name="Azeroth" label="Terrain maps">
