--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ Selected layer
 <option value="1.0.0/terrain/Azeroth">1.0.0 Minimap</option>
 </optgroup>
 <optgroup name="Azeroth" label="World maps" style="display:none">
+<option value="0.5.5/world/Azeroth">0.5.5 Map</option>
 <option value="1.0.0/world/Azeroth">1.0.0 Map</option>
 </optgroup>
 <optgroup name="Kalimdor" label="Concept maps" style="display:none">
@@ -251,6 +252,7 @@ Selected layer
 <option value="1.0.0/terrain/Kalimdor">1.0.0 Minimap</option>
 </optgroup>
 <optgroup name="Kalimdor" label="World maps" style="display:none">
+<option value="0.5.5/world/Kalimdor">0.5.5 Map</option>
 <option value="1.0.0/world/Kalimdor">1.0.0 Map</option>
 </optgroup>
 </select></label>
