Lands of Conflict concept map

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@ Selected layer
 <label>Add layer: <select id="addlayer" onchange="addSelectedLayer()">
 <optgroup name="Azeroth" label="Concept maps">
 <option value="2001-10/concept/Azeroth">October 2001 Design map</option>
+<option value="2004-09/concept/Azeroth">Lands of Conflict map</option>
 <option value="2004/concept/Azeroth">Game manual map</option>
 </optgroup>
 <optgroup name="Azeroth" label="Terrain maps">
